# gtest

test_project/: CMakeLists.txt
test_project/include/: Character.hh
test_project/src/: Character.cpp
test_project/unit_tests/: CMakeLists.txt
test_project/unit_tests/src/: GTest_main.cpp  test_simple.cpp
